2005-04-19  Paul Stevens <paul@nfg.nl>

	* dbmail-message.c, dbmail-message.h, check_dbmail_message.c: add
	initial support for base subject.
	* list.c, list.h, and many others: move the internal list
	implementation to the dm_ namespace to avoid conflicts with gmime2.1's
	own internal list setup.

2005-04-08  Paul Stevens <paul@nfg.nl>

	* db.c, db.h, server.c, main.c: db_check_version added.
	* README.ldap: added file to package root.
	* README, TODO, BUGS, EXTRAS: update files for 2.1 release.
	* acinclude.m4, INSTALL: document and enforce the glib/gmime 
	build dependency.
	* db.c (db_set_headercache): ignore errors in individual messages and
	remove a double free.

2005-04-06  Paul Stevens <paul@nfg.nl>

	* imap4.c: set COMMAND_SHOW_LEVEL to TRACE_INFO.

2005-04-05  Paul Stevens <paul@nfg.nl>

	* auth/authsql.c: prevent loop in auth_check_user_ext where
	alias==deliver_to.
	* auth/authldap.c: define configFile as extern.
	* imaputil.c: fix date_sql2imap. Closes bug #79.
	* Makefile.am: remove redundant AM_CFLAGS
	* server.c, serverchild.c: save and restore errno in signal handler.

2005-04-01  Paul Stevens <paul@nfg.nl>

	* auth/authldap.c: make forwarding actually work.
	* lmtp.c: removed a double free causing segfaults.

2005-03-22  Paul Stevens <paul@nfg.nl>

	* pool.c: make shmget failure more verbose using strerror.
	* maintenance.c: remove all references to -r.
	* maintenance.c, db.c, db.h, dbmail-message.c, dbmail-message.h: let 
	-b do_is_header and do_header_cache.
	* dbmail-message.c, dbmail-message.h: added GHashTable cache of
	headernames to DbmailMessage struct to minimize db lookups of
	dbmail_headername.id.

2005-03-19  Paul Stevens <paul@nfg.nl>

	* pipe.c, lmtp.c: add Return-Path header on final delivery (closes:
	#145)
	* dbmail-message.c, dbmail-message.h, pipe.c: cleanup over-quota patch.

2005-03-10  Ilja Booij <ilja@ic-s.nl>
	
	* INSTALL.qmail: fixed by Javier Carlos

2005-03-10  Paul Stevens <paul@nfg.nl>
